--- a/.hintrc
+++ b/.hintrc
@@ -3,6 +3,17 @@
     "development"
   ],
   "hints": {
-    "no-inline-styles": "off"
+    "axe/name-role-value": [
+      "default",
+      {
+        "button-name": "off"
+      }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
+    ]
   }
 }
